# aws-mainframe-modernization-carddemo

./: AGENTS.md  DESIGN.md  GNUCOBOL_RUNTIME.md  MIGRATION_PLAN.md  PLAN.md  README.md
app/cbl/: CBTRN02C.cbl  CBTRN03C.cbl  COACTUPC.cbl  COACTVWC.cbl  COADM01C.cbl  COBIL00C.cbl  COCRDLIC.cbl  COCRDSLC.cbl  COCRDUPC.cbl  COMEN01C.cbl  CORPT00C.cbl  COSGN00C.cbl  COTRN00C.cbl  COTRN01C.cbl  COTRN02C.cbl  COUSR00C.cbl  COUSR01C.cbl  COUSR02C.cbl  COUSR03C.cbl  GCUSRSEC.cbl
output/backend/: README.md  pyproject.toml  store.json
output/backend/app/: __init__.py  fixed_width.py  importing.py  jobs.py  main.py  models.py  scheduler.py  seed_import.py  services.py  storage.py
output/backend/app/domain/: __init__.py  accounts.py  auth.py  customers.py  job_telemetry.py  lookups.py  posting.py  report_requests.py  transactions.py  transactions_activity.py  transactions_reference.py  users.py
output/backend/tests/: __init__.py  conftest.py  test_accounts.py  test_auth.py  test_customers.py  test_fixed_width.py  test_health.py  test_import.py  test_importing.py  test_job_telemetry.py  test_lookups.py  test_posting.py  test_report_requests.py  test_seed_import.py  test_storage.py  test_transaction_activity.py  test_transaction_reference.py  test_transactions.py  test_user_security.py
output/docs/: account-card-records.md  (+8 more)
scripts/: build_gnucobol_admin.sh  build_gnucobol_batch.sh  build_gnucobol_runtime.sh  check_non_cics_slice.sh  init_gnucobol_data.sh  reset_gnucobol_data.sh
tasks/: prd-phase-0-scaffolding.md  prd-phase-1-domain-model-and-data-contracts.md
(+33 files in other folders)
